Macro.h 엔진 버전, 엔진 이름, 앱 버전, 디버그 매크로 추가 --------------------------------------------------------------------------- ManagedObject.h 기본 생성자 추가 복사 생성자 및 대입 생성자 추가 ---------------------------------------------------------------------------- VulkanDevice.h/VulkanDevice.cpp VulkanInstance 래퍼 클래스 생성 및 초기화, 삭제 코드 추가 ----------------------------------------------------------------------------- WindowApplicatioh.h/cpp 윈도우 생성 코드 및 VulkanDevice 코드 결합 ------------------------------------------------------------------------------ VulkanDebug.h/cpp 유효성 검사 레이어 할당 코드 추가 ------------------------------------------------------------------------------ VulkanExtension.h/cpp Vulkan에서 사용하는 확장 목록 나열 ----------------------------------------------------------------------------- VulkanInstance.h/cpp VkInstance 및 VulkanExtension, VulkanDebug 클래스 관리

--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -77,6 +77,12 @@
     <IncludePath>D:\Projects\Vulkan\LkEngine\GLFW\include;D:\Projects\Vulkan\LkEngine\GLM;D:\Projects\Vulkan\LkEngine\VulkanSDK\Include;$(IncludePath)</IncludePath>
     <LibraryPath>D:\Projects\Vulkan\LkEngine\VulkanSDK\Lib32;D:\Projects\Vulkan\LkEngine\GLFW\lib-vc2015;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ExecutablePath>D:\Projects\Vulkan\LkEngine\VulkanSDK\Include;D:\Projects\Vulkan\LkEngine\GLFW\include;$(ExecutablePath)</ExecutablePath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ExecutablePath>D:\Projects\Vulkan\LkEngine\VulkanSDK\Include;D:\Projects\Vulkan\LkEngine\GLFW\include;$(ExecutablePath)</ExecutablePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -124,11 +130,18 @@
   <ItemGroup>
     <ClInclude Include="Macro.h" />
     <ClInclude Include="ManagedObject.h" />
+    <ClInclude Include="VulkanDebug.h" />
     <ClInclude Include="VulkanDevice.h" />
+    <ClInclude Include="VulkanExtension.h" />
+    <ClInclude Include="VulkanInstance.h" />
     <ClInclude Include="WindowsApplication.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="VulkanDebug.cpp" />
+    <ClCompile Include="VulkanDevice.cpp" />
+    <ClCompile Include="VulkanExtension.cpp" />
+    <ClCompile Include="VulkanInstance.cpp" />
     <ClCompile Include="WindowsApplication.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
