--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
@@ -30,11 +30,32 @@
     <ClInclude Include="WindowsApplication.h">
       <Filter>Core\Header\Window</Filter>
     </ClInclude>
+    <ClInclude Include="VulkanInstance.h">
+      <Filter>Core\Header\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanDebug.h">
+      <Filter>Core\Header\Vulkan</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanExtension.h">
+      <Filter>Core\Header\Vulkan</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="WindowsApplication.cpp">
       <Filter>Core\Header\Window</Filter>
+    </ClCompile>
+    <ClCompile Include="VulkanExtension.cpp">
+      <Filter>Core\Header\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="VulkanDevice.cpp">
+      <Filter>Core\Header\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="VulkanDebug.cpp">
+      <Filter>Core\Header\Vulkan</Filter>
+    </ClCompile>
+    <ClCompile Include="VulkanInstance.cpp">
+      <Filter>Core\Header\Vulkan</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
