--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="VulkanExtension.h">
       <Filter>Core\Header\Vulkan</Filter>
     </ClInclude>
+    <ClInclude Include="VulkanQueue.h">
+      <Filter>Core\Header\Vulkan</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
