Debug 매크로 추가 및 glfwInit 호출 위치 VulkanInstance에서 호출하도록 변경

--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -70,12 +70,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\Projects\Vulkan\LkEngine\GLFW\include;D:\Projects\Vulkan\LkEngine\GLM;D:\Projects\Vulkan\LkEngine\VulkanSDK\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Projects\Vulkan\LkEngine\VulkanSDK\Lib32;D:\Projects\Vulkan\LkEngine\GLFW\lib-vc2015;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Projects\Vulkan\Library\GLFW\include;D:\Projects\Vulkan\Library\GLM;D:\Projects\Vulkan\Library\1.0.57.0\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Projects\Vulkan\Library\1.0.57.0\Lib32;D:\Projects\Vulkan\Library\GLFW\lib-vc2015;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>D:\Projects\Vulkan\LkEngine\GLFW\include;D:\Projects\Vulkan\LkEngine\GLM;D:\Projects\Vulkan\LkEngine\VulkanSDK\Include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Projects\Vulkan\LkEngine\VulkanSDK\Lib32;D:\Projects\Vulkan\LkEngine\GLFW\lib-vc2015;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\Projects\Vulkan\Library\1.0.57.0\Include;D:\Projects\Vulkan\Library\GLM;D:\Projects\Vulkan\Library\GLFW\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\Projects\Vulkan\Library\GLFW\lib-vc2015;D:\Projects\Vulkan\Library\1.0.57.0\Lib32;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ExecutablePath>D:\Projects\Vulkan\LkEngine\VulkanSDK\Include;D:\Projects\Vulkan\LkEngine\GLFW\include;$(ExecutablePath)</ExecutablePath>
