--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Core\Header\Window">
       <UniqueIdentifier>{57a6b3dd-e666-41f9-bf21-86379b7032f0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Core\Header\Application">
+      <UniqueIdentifier>{5fd71d51-5b62-4710-b6c6-5891307ac7e6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ManagedObject.h">
@@ -26,9 +29,6 @@
     </ClInclude>
     <ClInclude Include="VulkanDevice.h">
       <Filter>Core\Header\Vulkan</Filter>
-    </ClInclude>
-    <ClInclude Include="WindowsApplication.h">
-      <Filter>Core\Header\Window</Filter>
     </ClInclude>
     <ClInclude Include="VulkanInstance.h">
       <Filter>Core\Header\Vulkan</Filter>
@@ -42,12 +42,13 @@
     <ClInclude Include="VulkanQueue.h">
       <Filter>Core\Header\Vulkan</Filter>
     </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>Core\Header\Window</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="WindowsApplication.cpp">
-      <Filter>Core\Header\Window</Filter>
-    </ClCompile>
     <ClCompile Include="VulkanExtension.cpp">
       <Filter>Core\Header\Vulkan</Filter>
     </ClCompile>
@@ -63,5 +64,9 @@
     <ClCompile Include="VulkanQueue.cpp">
       <Filter>Core\Header\Vulkan</Filter>
     </ClCompile>
+    <ClCompile Include="Window.cpp">
+      <Filter>Core\Header\Window</Filter>
+    </ClCompile>
+    <ClCompile Include="Application.cpp" />
   </ItemGroup>
 </Project>
