1. Init과 Shutdown 부활 2. Vulkan 컴포넌트들의 기본 인터페이스 클래스 구현 3. 멤버 변수로 VulkanDevice 포인터를 가지고 있는 인터페이스 클래스 구현 4. SAFE_DELETE, SAFE_ARR_DELETE 변경

--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -129,10 +129,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="VulkanBaseInterface.h" />
     <ClInclude Include="Macro.h" />
     <ClInclude Include="ManagedObject.h" />
     <ClInclude Include="VulkanDebug.h" />
     <ClInclude Include="VulkanDevice.h" />
+    <ClInclude Include="VulkanDeviceChild.h" />
     <ClInclude Include="VulkanExtension.h" />
     <ClInclude Include="VulkanInstance.h" />
     <ClInclude Include="VulkanQueue.h" />
