--- a/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
+++ b/LKEngineProject/LKEngineProject/LKEngineProject.vcxproj
@@ -21,6 +21,8 @@
   <ItemGroup>
     <ClCompile Include="Application\Source\Application.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanCommandBuffers.cpp" />
+    <ClCompile Include="Vulkan\Source\VulkanCommandPool.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDebug.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanDevice.cpp" />
     <ClCompile Include="Vulkan\Source\VulkanExtension.cpp" />
@@ -38,8 +40,10 @@
     <ClInclude Include="Utility\Header\Macro.h" />
     <ClInclude Include="Utility\Header\ManagedObject.h" />
     <ClInclude Include="Vulkan\Header\IVulkanObject.h" />
+    <ClInclude Include="Vulkan\Header\VulkanCommandBuffers.h" />
+    <ClInclude Include="Vulkan\Header\VulkanCommandPool.h" />
     <ClInclude Include="Vulkan\Header\VulkanDebug.h" />
-    <ClInclude Include="Vulkan\Header\VulkanDescriptorSet.h" />
+    <ClInclude Include="Vulkan\Header\VulkanDescriptorSets.h" />
     <ClInclude Include="Vulkan\Header\VulkanDevice.h" />
     <ClInclude Include="Vulkan\Header\VulkanDeviceChild.h" />
     <ClInclude Include="Vulkan\Header\VulkanExtension.h" />
